<resources>
    <string name="app_name">WTCapital</string>
    <string name="enter">Enter</string>
    <string name="question">Question</string>
    <string name="capitals">capitalseng</string>
    <string name="answer1">Answer1</string>
    <string name="answer2">Answer2</string>
    <string name="answer3">Answer3</string>
    <string name="answer4">Answer4</string>
    <string name="answer5">Answer5</string>
    <string name="answer6">Answer6</string>
    <string name="score">Score</string>
    <string name="games_number_question">Enter questions number</string>
    <string name="question_text">The capital of</string>
</resources>
