<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="44dp"
            android:layout_height="38dp"
            tools:ignore="MissingConstraints"
            android:src="@drawable/ic_help_outline_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_text"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

    <TextView
            android:id="@+id/question"
            android:hint="@string/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            tools:ignore="MissingConstraints"
            tools:layout_constraintTop_toBottomOf="@id/questionText"
            android:gravity="center"/>


    <LinearLayout
            android:id="@+id/buttonsContainerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            app:layout_constraintTop_toBottomOf="@+id/question"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/question"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/answer1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/answer2"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer4"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/answer3"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer5"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/answer4"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                android:id="@+id/answer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_color_default"
                android:layout_marginTop="9dp"
                android:hint="@string/answer6"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/answer5"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>